--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Проблема технологических зависимостей</title>
-        <link rel="stylesheet" href="/static/css/style.css">
+        <link rel="stylesheet" href="{{path_css}}">
     </head>
     <body>
         <a href="/calc">Калькулятор</a>
@@ -11,7 +11,7 @@
         <p>
             Технологическую зависимость можно определить как технологически обусловленное, часто повторяющееся, навязчивое поведение, несмотря негативные последствия для пользователя. Навязчивое желание подключиться к Интернету и неспособность от него вовремя отключиться является аддикцией - формой де-виантного поведения.
         </p>
-        <img src="/static/img/cats.jpg">
+        <img src="{{path_img}}">
         <div id="ww_1b051582014a7" v='1.3' loc='id' a='{"t":"horizontal","lang":"ru","ids":["wl1932"],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"#CDDC39","cl_font":"#000000","cl_cloud":"#000000","cl_persp":"#000000","cl_sun":"#000000","cl_moon":"#000000","cl_thund":"#000000"}'>Больше прогнозов: <a href="https://meteolabs.org/погода_москва/завтра/" id="ww_1b051582014a7_u" target="_blank">Погода на завтра</a></div><script async src="https://app2.weatherwidget.org/js/?id=ww_1b051582014a7"></script>
         <h2>Как решить проблему?</h2>
         <ul>
